# Hanzi2Pinyin

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
addon/: __init__.py  about.toml
addon/components/: ruby_button.py
addon/lib/pypinyin-0.53.0.dist-info/: RECORD
addon/lib/pypinyin-0.54.0.dist-info/: RECORD
addon/utils/: __init__.py  about.py  dependencies.py  versions.py
docs/: development.md  quick_start_guide.md
docs/ankiweb/: description.md  upload_data.md
